--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
@@ -24,7 +24,7 @@ where $\alpha_1$ and $\alpha_2$ are measures of strength of the association betw
 
 From the fitted JM we found that $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS were significantly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.10 to 0.14 (first and third quartiles of the fitted velocities, respectively) corresponds to a 2.02 fold increase in the hazard of GR. In terms of the predictive performance, we found that the area under the receiver operating characteristic curves \citep{landmarking2017} was 0.61, 0.65 and 0.59 at year one, year two, and year three of follow-up, respectively. Parameter estimates are presented in detail in Web Appendix C.
 
-In PRIAS, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the PSA-DT of the patient. However, because the parameters are estimated using a full likelihood approach \citep{tsiatis2004joint}, the JM gives unbiased estimates for all of the parameters, under the condition that the model is correctly specified (see Web Appendix A.2 and C.3). To this end, we performed several sensitivity analysis in our model (e.g., changing the position of the knots, etc.) to investigate the fit of the model and also the robustness of the results. In all of our attempts, the same conclusions were reached, namely that the $\log_2 \mbox{PSA}$ velocity is more strongly associated with the hazard of GR compared to the $\log_2 \mbox{PSA}$ levels.
+In PRIAS, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the PSA-DT of the patient. However, because the parameters are estimated using a full likelihood approach \citep{tsiatis2004joint}, the JM gives valid estimates for all of the parameters, under the condition that the model is correctly specified (see Web Appendix A.2 and C.3). To this end, we performed several sensitivity analysis in our model (e.g., changing the position of the knots, etc.) to investigate the fit of the model and also the robustness of the results. In all of our attempts, the same conclusions were reached, namely that the $\log_2 \mbox{PSA}$ velocity is more strongly associated with the hazard of GR compared to the $\log_2 \mbox{PSA}$ levels.
 
 \subsection{Personalized Schedules for the First Demonstration Patient}
 \label{subsec : demo_prias_pers_schedule}
