--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -275,7 +275,7 @@ Accepted March} 0000.}
 
 \section*{Supplementary Materials}
 
-Web Appendix A, C, and D referenced in Section~\ref{sec : jm_framework},  Section~\ref{sec : pers_schedule_PRIAS},  and  Section~\ref{sec: discussion}, respectively, and the derivation of Equation (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}) in Web Appendix B, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
+Web Appendix A, B, and C, D referenced in Section~\ref{sec : jm_framework}, Section~\ref{subsec : estimation} and Section~\ref{sec : pers_schedule_PRIAS}, respectively, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
 
 %Web Appendix A and C, referenced in Section~\ref{sec : jm_framework} and  Section~\ref{sec : pers_schedule_PRIAS}  respectively, and the derivation of Equations ~\ref{eq : expected_time_survprob} and ~\ref{eq : var_time_survprob} in Web Appendix B, are available with
 %this paper at the Biometrics website on Wiley Online Library.\vspace*{-8pt}
