--- a/report/pers_schedule/biometrics_submission/replyletter/ae_resp.tex
+++ b/report/pers_schedule/biometrics_submission/replyletter/ae_resp.tex
@@ -1,6 +1,14 @@
 % !TEX root =  ../ReplyLetterMain.tex
 \clearpage
-\section*{Response to AE's Comments}
-We would like to thank the Associate Editor for his/her constructive comments, which have allowed us to considerably improve our paper. The main differences of the new version of the manuscript compared to the previous one can be found in Sections~2, 3 and 5. In addition, changes regarding the specific comments have been made throughout the text.
+\section*{Response to Associate Editor's Comments}
+We would like to thank the Associate Editor (AE) for his/her constructive comments, which have allowed us to considerably improve our paper. The main differences of the new version of the manuscript compared to the previous one can be found in Sections~5 and 6, Web Appendix A.2, C and D. In addition, changes regarding the specific comments have been made throughout the text.
 
-With respect to the AE's note about how delaying active treatment relates to survival outcome, the biopsies are already conducted for the patients according to the PRIAS schedule. Thus we cannot test the effect of delay in detection Gleason reclassification (GR) due to personalized schedules on the prostate cancer (PCa) specific mortality, unless they are applied on the patients. It may however be possible to compare the effect of delay in detection of GR due to PRIAS (less frequent biopsies) and annual schedules (more frequent biopsies), on the PCa specific mortality. However this would be out of the scope of our current focus on personalized schedules. In addition, multiple studies have reported small PCa specific mortality in low risk patients enrolled in active surveillance programs \citep{loeb2016immediate,tosoian2011active,klotz2009clinical}. That is, less frequent schedules may be useful in such scenarios. For example, for slowly progressing patients (subgroup $G_3$) in our simulation study, we observed that even a personalized schedule which conducts on average two biopsies leads to an average delay of 10 months in detecting GR. This is only four months more delay than that of the annual schedule. Given, the low PCa mortality a relative difference of four months may not be that bad an alternative.
+You may find below our responses to the specific issues raised.
+
+\begin{enumerate}
+	\item \underline{How would delaying in activating treatments translate into survival outcomes?}
+
+The AE raises a very important point. A long delay of the biopsy time may have repercussions with respect to the optimal timing of initiating active treatment. In the specific context of prostate cancer, and given the characteristics of the disease, delaying active treatment for 10-12 months is considered acceptable by the urologists. This is also what has driven the specific choices we have made for the optimal cut-off value for individualized risk predictions in Section \ref{subsec : estimation} of the original manuscript. However, in other contexts such a delay may not be acceptable, leading to another choice of the optimal cut-point. From a methodological perspective, accounting for the effect of delaying biopsy to survival would require modeling the survival outcome, and extending the relative risk sub-model in the specification of the joint model into a multi-state process. We are currently working on these extensions, but it falls outside the scope of our current paper.
+
+\end{enumerate}
+
