--- a/report/pers_schedule/biometrics_submission/supplementary/jm_param_estimation.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/jm_param_estimation.tex
@@ -61,10 +61,10 @@ We use independent normal priors with zero mean and variance 100 for the fixed e
 \label{subsec : int_censoring_fulllikelihood_proof}
 The true time of GR $T^*_i$ is not known for any of the patients. In order to detect GR, PRIAS uses a fixed schedule of biopsies wherein biopsies are conducted at year one, year four, year seven and year ten of follow-up, and every five years thereafter. However, PRIAS switches to a more frequent annual biopsy schedule for faster progressing patients. These are patients with PSA doubling time (PSA-DT) of less than 10 years. The latter is measured as the inverse of the slope of the regression line through the base two logarithm of PSA values. Thus, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the observed PSA values. 
 
-It is natural to question in this scenario if the parameters of the JM are affected by PSA-DT dependent interval censoring. However, because the parameters of the JM are estimated using a full likelihood approach \citep{tsiatis2004joint}, the JM allows the schedule of biopsies to depend upon the observed PSA values (e.g., via PSA-DT). To show this, consider the following full general specification of the JM that we use. Let $\boldsymbol{y}_i$ denote the observed PSA measurements for the $i$-th patient, and $l_i, r_i$ denote the two time points of the interval in which GR occurs for the $i$-th patient. In addition let $T_i^S$ and $\mathcal{V}_i$ denote the schedule of biopsies and schedule of PSA measurements, respectively. Under the assumption that both of these schedules may depend upon only the observed $\boldsymbol{y}_i$, the joint likelihood of all four processes is given by:
+It is natural to question in this scenario if the parameters of the JM are affected by PSA-DT dependent interval censoring. However, because the parameters of the JM are estimated using a full likelihood approach \citep{tsiatis2004joint}, the JM allows the schedule of biopsies to depend upon the observed PSA values (e.g., via PSA-DT), under the condition that the model is correctly specified (we discuss this aspect in \ref{sec : param_estimates_jm_fit_prias}). To show this, consider the following full general specification of the JM that we use. Let $\boldsymbol{y}_i$ denote the observed PSA measurements for the $i$-th patient, and $l_i, r_i$ denote the two time points of the interval in which GR occurs for the $i$-th patient. In addition let $T_i^S$ and $\mathcal{V}_i$ denote the schedule of biopsies and schedule of PSA measurements, respectively. Under the assumption that both of these schedules may depend upon only the observed $\boldsymbol{y}_i$, the joint likelihood of all four processes is given by:
 \begin{equation}
 p(\boldsymbol{y}_i, l_i, r_i, T_i^S, \mathcal{V}_i \mid \boldsymbol{\theta}, \boldsymbol{\psi}) = p(\boldsymbol{y}_i, l_i, r_i \mid \theta) \times p(T_i^S, \mathcal{V}_i \mid \boldsymbol{y}_i, \boldsymbol{\psi}).
 \end{equation}
 From this decomposition we can see that even if the processes $T_i^S$ and $\mathcal{V}_i$ may be determined from $\boldsymbol{y}_i$, if we are interested in the parameters $\boldsymbol{\theta}$ of the joint distribution of longitudinal and event outcome, we can maximize the likelihood based on the first term and ignore the second term. In other words, the second term will not carry information for $\boldsymbol{\theta}$.
 
-It is important to note that, since we use a full likelihood approach, the estimates that we obtain are consistent and asymptotically unbiased \citep{gentleman1994maximum}, despite the interval censoring observed. 
+It is important to note that, since we use a full likelihood approach with an interval censoring specification, the estimates that we obtain are consistent and asymptotically unbiased \citep{gentleman1994maximum}, despite the interval censoring observed. 
