--- a/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
@@ -20,7 +20,7 @@ where $\alpha_1$ and $\alpha_2$ are measures of strength of the association betw
 
 \subsection{Choice of the t-distribution for the Error Term}
 \label{subsec : t_dist_choice}
-For the error term $\varepsilon_i(t)$ in the longitudinal sub-model we assumed a t-distribution with three degrees of freedom and scale $\sigma$. This decision was taken on the basis of quantile-quantile plot (left panel of Web Figure \ref{fig : qqplot_norm_t3_web}) of the residuals from a JM fitted to the PRIAS dataset in which errors were assumed to be normally distributed with mean zero and variance $\sigma^2$. It can be seen that the residuals from this model exhibit symmetric long tails. We thank the referees for motivating us to inspect this in detail. In this regard, we then fitted two more JMs, each with errors assumed to be t-distributed with four and three degrees of freedom. Based on the quantile-quantile plots, the model we eventually selected was the one in which t-distribution had three degrees freedom. The quantile-quantile plot for this model is shown in the right panel of Web Figure \ref{fig : qqplot_norm_t3_web}.
+For the error term $\varepsilon_i(t)$ in the longitudinal sub-model we assumed a t-distribution with three degrees of freedom and scale $\sigma$. This decision was taken on the basis of quantile-quantile plot (left panel of Web Figure \ref{fig : qqplot_norm_t3_web}) of the residuals from a JM fitted to the PRIAS dataset in which errors were assumed to be normally distributed with mean zero and variance $\sigma^2$. It can be seen that the residuals from this model exhibit symmetric long tails. We thank the Referees for motivating us to inspect this in detail. In this regard, we then fitted two more JMs, each with errors assumed to be t-distributed with four and three degrees of freedom. Based on the quantile-quantile plots, the model we eventually selected was the one in which t-distribution had three degrees freedom. The quantile-quantile plot for this model is shown in the right panel of Web Figure \ref{fig : qqplot_norm_t3_web}.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/model_fit/qqplot_norm_t3.eps}}
@@ -75,7 +75,7 @@ $\sigma$                               & 0.181 & 0.001 & 0.179 & 0.183          
 
 \clearpage
 
-For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS are strongly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.104 to 0.140 (first and third quartiles of the fitted velocities, respectively) corresponds to a 2.022 fold increase in the hazard of GR. A 10 year increase in the age at the time of inclusion in AS corresponds to a 1.425 fold increase in the hazard of GR.
+For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS are strongly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.104 to 0.140 (first and third quartiles of the fitted velocities, respectively) corresponds to a 2.022 fold increase in the hazard of GR. An increase in age at the time of inclusion in AS from 65 years to 75 years (first and third quartiles of age in PRIAS dataset) corresponds to a 1.419 fold increase in the hazard of GR.
 
 \begin{table}[!htb]
 \begin{center}
@@ -95,11 +95,11 @@ Slope($\log_2 \mbox{PSA}$)           & 2.888 & 0.290 & 2.318 & 3.452 & \textless
 
 \clearpage
 
-To compare the predictive performance of a model having association between hazard of GR and $\log_2 \mbox{PSA}$ values, versus a model having the association with both $\log_2 \mbox{PSA}$ value and velocity, we calculate the area under the receiver operating characteristic curves, also called AUC \citep*{landmarking2017} for these models. Since in a joint model time dependent AUC is more relevant, we calculate the AUC at year one, year two and year three of follow-up in AS. To obtain the 95\% confidence interval, we used 15 bootstrapped datasets of patients from the training dataset utilized in this paper. The time window for which the AUC is calculated is one year. The resulting AUC are presented in \ref{tab : AUC}.
+To compare the predictive performance of a model having association between hazard of GR and $\log_2 \mbox{PSA}$ values, versus a model having the association with both $\log_2 \mbox{PSA}$ value and velocity, we calculate the area under the receiver operating characteristic curves, also called AUC \citep*{landmarking2017} for these models. Since in a joint model time dependent AUC is more relevant, we calculate the AUC at year one, year two and year three of follow-up in AS. The time window for which the AUC is calculated is one year. The resulting AUC are presented in \ref{tab : AUC}.
 
 \begin{table}[!htb]
 \begin{center}
-\caption{Area under the receiver operating characteristic curves (AUC), and 95\% confidence interval in brackets, obtained using 15 bootstrapped datasets.}
+\caption{Area under the receiver operating characteristic curves (AUC), and 95\% confidence interval in brackets.}
 \label{tab : AUC}
 \begin{tabular}{rrr}
 \Hline
@@ -115,4 +115,4 @@ Year                      & $\log_2 \mbox{PSA}$ value and velocity association &
 
 \clearpage
 \subsection{PSA-DT Dependent Interval Censoring in Time of Gleason Reclassification}
-In PRIAS, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the observed PSA values (via PSA-DT). It is natural to question in this scenario if the parameters of the JM are affected by PSA-DT dependent interval censoring. To this end, we discussed via the formulation of the likelihood function in \ref{subsec : int_censoring_fulllikelihood_proof}, that the JM gives unbiased estimates of the parameters even if the interval censoring depends on PSA-DT. However, in this section we also demonstrate this via a simulated dataset of 750 patients. The true event times $T^*_i$ for these patients were generated using parameters from a joint model fitted to the PRIAS dataset. However this joint model did not include association between velocity of log PSA values and hazard of GR. That is, the hazard of GR $h_i(t)$ at any time $t$ depends only on the underlying log PSA value $m_i(t)$ at that time. Furthermore, for these patients we used the schedule of PRIAS to generate the interval $l_i \leq T^*_i \leq r_i$ in which GR is detected. Thus the observed data for $i$-th patient is $\{\boldsymbol{y}_i, l_i, r_i\}$. Our aim is to show that if there is no association between $h_i(t)$ and velocity of log PSA value $m'_i(t)$, then even though the biopsy schedule depends on PSA-DT (which is a crude measure of PSA velocity), a JM fitted with both value and velocity associations will have an insignificant velocity association. In the fitted JM we found the value association (95\% credible interval in brackets) to be 0.182 [0.090, 0.274], and the velocity association to be -0.001 [-0.295, 0.254]. That is even though the schedule of biopsies depended upon observed PSA values it did not lead to a spurious association. 
+In PRIAS, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the observed PSA values (via PSA-DT). It is natural to question in this scenario if the parameters of the JM are affected by PSA-DT dependent interval censoring. To this end, we discussed via the formulation of the likelihood function in \ref{subsec : int_censoring_fulllikelihood_proof}, that the JM gives consistent and asymptotically unbiased estimates of the parameters even if the interval censoring depends on PSA-DT, under the condition that the model is correctly specified. However, in this section we also demonstrate this via a simulated dataset of 750 patients. The true event times $T^*_i$ for these patients were generated using parameters from a joint model fitted to the PRIAS dataset. However this joint model did not include association between velocity of log PSA values and hazard of GR. That is, the hazard of GR $h_i(t)$ at any time $t$ depends only on the underlying log PSA value $m_i(t)$ at that time. Furthermore, for these patients we used the schedule of PRIAS to generate the interval $l_i \leq T^*_i \leq r_i$ in which GR is detected. Thus the observed data for $i$-th patient is $\{\boldsymbol{y}_i, l_i, r_i\}$. Our aim is to show that if there is no association between $h_i(t)$ and velocity of log PSA value $m'_i(t)$, then even though the biopsy schedule depends on PSA-DT (which is a crude measure of PSA velocity), a JM fitted with both value and velocity associations will have an insignificant velocity association. In the fitted JM we found the value association (95\% credible interval in brackets) to be 0.182 [0.090, 0.274], and the velocity association to be -0.001 [-0.295, 0.254]. That is even though the schedule of biopsies depended upon observed PSA values it did not lead to a spurious association. To check if we correctly specified the JM, we performed several sensitivity analysis in our model (e.g., changing the position of the knots, etc.) to investigate the fit of the model and also the robustness of the results. In all of our attempts, the same conclusions were reached, namely that the $\log_2 \mbox{PSA}$ velocity is more strongly associated with the hazard of GR compared to the $\log_2 \mbox{PSA}$ levels.
