--- a/report/pers_schedule/biometrics_submission/ReplyLetterMain.tex
+++ b/report/pers_schedule/biometrics_submission/ReplyLetterMain.tex
@@ -12,9 +12,27 @@
 \usepackage{dirtytalk}
  \usepackage{xr}
 
+\usepackage{tikz}
+\usepackage{tikzscale}
+\usepackage{graphicx}
+\usetikzlibrary{shapes.geometric, arrows, positioning}
+%%%%% PLACE YOUR OWN MACROS HERE %%%%%
+
+\tikzstyle{startstop_big} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black,text width = 8.5cm, fill=red!30]
+\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black,text width = 5cm, fill=red!30]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=2cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
+\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width = 3cm, draw=black, fill=orange!30]
+\tikzstyle{process_wide_3pt5cm} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width = 3.5cm, draw=black, fill=orange!30]
+\tikzstyle{process_wide_4cm} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width = 4cm, draw=black, fill=orange!30]
+\tikzstyle{process_wide_4pt5cm} = [rectangle, minimum width=3cm, minimum height=1cm, text width = 4.5cm, draw=black, fill=orange!30]
+\tikzstyle{process_wide_5cm} = [rectangle, minimum width=3cm, minimum height=1cm, text width = 5cm, draw=black, fill=orange!30]
+\tikzstyle{decision} = [diamond, minimum width=1cm, minimum height=1cm,text centered,text width = 2.25cm, draw=black, fill=green!30]
+\tikzstyle{arrow} = [thick,->,>=stealth]
+
 \externaldocument{arxiv_submission}
 \externaldocument{arxiv_submission_supplementary}
 
+\let\rmn\mathrm
 \newcommand{\Hline}
 {
 \hline
@@ -26,8 +44,8 @@
 
 \begin{document}
 
-%\includepdf[pages={1-2}]{ReplyLetterFirstPage.pdf}
-\includepdf[pages={1}]{ReplyLetterFirstPage.pdf}
+\includepdf[pages={1-2}]{ReplyLetterFirstPage.pdf}
+%\includepdf[pages={1}]{ReplyLetterFirstPage.pdf}
 
 %===========================================
 \input{replyletter/ae_resp}
