--- a/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
@@ -4,6 +4,6 @@
 \label{sec: discussion}
 In this paper we presented personalized schedules based on joint models for time to event and longitudinal data, for surveillance of PCa patients. These schedules are dynamic in nature, and at any given follow-up time, utilize a patient's historical PSA measurements and repeat biopsies conducted up to that time. We proposed two types of personalized schedules, namely those based on expected and median time of GR of a patient, and those based on dynamic risk of GR. We also proposed a combination (hybrid approach) of these two approaches, which is useful in scenarios where variance of time of GR for a patient is high. We then proposed criteria for evaluation of various schedules and a method to select a suitable schedule.
 
-We demonstrated the dynamic and personalized nature of our schedules using the PRIAS dataset. In these demonstrations we observed that a recent biopsy impacts the schedules more than recent PSA measurements, which is reasonable since biopsies are more reliable. We did not know the true GR time for PRIAS patients, and hence to compare the performance of personalized schedules with PRIAS and annual schedules, we conducted a simulation study. The discussion of performance of biopsy schedules entails the discussion of amount of risk (offset) and burden (number of biopsies), a patient is willing to undergo. Since annual and PRIAS schedules are already in practice, it can be argued that the maximum offsets possible due to these schedules (one and three years, respectively) are acceptable to doctors. In addition, multiple studies have reported small PCa specific mortality in low risk AS patients \citep{loeb2016immediate,tosoian2011active,klotz2009clinical}. Thus, less frequent schedules may be an interesting alternative to annual schedules for AS patients. For example, for slowly progressing patients in our simulation study, we observed that the personalized schedule based on expected time of GR conducts on average two biopsies and leads to an average delay of 10 months in detecting GR. This is only four months more delay than that of the annual schedule which conducts six biopsies for the same. Given the low PCa mortality, a relative difference of four months, and an absolute offset of less than one year may not be that bad an alternative. In comparison, for faster progressing patients early detection (annual or PRIAS schedule) may be necessary because such patients are often those who are misclassified to be AS patients during surveillance. When it is not known in advance if a patient will have a faster or slower progression of PCa, the hybrid approach provides an interesting alternative. It conducts one biopsy less than the annual schedule in faster progressing PCa patients while detecting GR at 10.3 months since its occurrence on average. For slowly progressing PCa patients it conducts two biopsies less than the annual schedule while detecting GR at 8.6 months since its occurrence on average. 
+We demonstrated the dynamic and personalized nature of our schedules using the PRIAS dataset. We observed that a recent biopsy impacts the schedules more than recent PSA measurements, which correlates with biopsies being more reliable. Since true GR time is not known for PRIAS patients, we conducted a simulation study to compare personalized schedules with PRIAS and annual schedules. The latter two schedules are already in practice. Hence it can be argued that the maximum possible offsets due to these schedules (one and three years, respectively) are acceptable to doctors. Thus, less frequent schedules with offset under one year may reduce the burden of biopsies while simultaneously being practical. For example, for slowly progressing patients in our simulation study, we observed that the schedule based on expected time of GR conducts on average two biopsies and has an average offset of 10 months. In comparison, annual schedule conducts six biopsies on average and gives an offset smaller by only four months, making the personalized schedule a suitable alternative. For high risk patients however, early detection (annual or PRIAS schedule) may be necessary, given the rapidness of progression. When it is not known in advance if a patient will have a fast or slow progression of PCa, the hybrid approach may be used. It conducts one biopsy less than the annual schedule in faster progressing PCa patients and has an average offset of 10.25 months. For slowly progressing PCa patients it conducts two biopsies less than the annual schedule and has an average offset of 8.55 months.
 
-More personalized schedules can be added to the current set, using loss functions which asymmetrically penalize overshooting/undershooting the target GR time. For dynamic risk of GR based schedules, more simulations are required to compare data driven $\kappa$ values (e.g., $\mbox{F}_1$ score), with $\kappa$ chosen using decision analytic approaches such as the net benefit measure \citep{vickers2006decision}, and with various fixed $\kappa$ values used by doctors in practice. We assumed that the time of GR was interval censored, however in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Schedules which account for error in measurement of time of GR will be interesting to investigate further \citep{coley2017}. Lastly, there is potential for including diagnostic information from magnetic resonance imaging (MRI) or DRE. When such information is not continuous in nature, our proposed methodology can be easily extended by utilizing the framework of generalized linear mixed models.
+More personalized schedules can be added to the current set, using loss functions which asymmetrically penalize overshooting/undershooting the target GR time. For dynamic risk of GR based schedules, more simulations are required to compare data driven $\kappa$ values (e.g., $\mbox{F}_1$ score), with $\kappa$ chosen using decision analytic approaches such as the net benefit measure \citep{vickers2006decision}, and with various fixed $\kappa$ values used by doctors in practice. In general the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Schedules which account for error in measurement of time of GR will be interesting to investigate further \citep{coley2017}. Lastly, there is potential for including diagnostic information from magnetic resonance imaging (MRI) or DRE. When such information is not continuous in nature, our proposed methodology can be easily extended by utilizing the framework of generalized linear mixed models.
